# mindbox

./: .gitignore  CLAUDE.md  README.md  backlog.md  journal.txt  pyproject.toml
mindboxes/: sql-now.mb  vim.mb
plugin/: mindbox.vim
scripts/: generate_mindboxes.py
scripts/Users/jerik/workspace/mind/mindboxes/: kinder-spange.mb
test/: run.vim  test_mindbox.vim
tests/: test_generate_mindboxes.py
vim/plugin/: mindbox.vim
